--- a/nbs/01-library-gen.ipynb
+++ b/nbs/01-library-gen.ipynb
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "id": "24adad09-22a3-4043-beae-0cdf8d6930d8",
    "metadata": {},
    "outputs": [],
@@ -559,12 +559,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "id": "149d0d27-1e89-42e2-b507-d1a608fa0680",
    "metadata": {},
    "outputs": [],
    "source": [
-    "download_genre_attrs()"
+    "fp = '../data/genre_attrs.csv'\n",
+    "\n",
+    "download_genre_attrs(fp)"
    ]
   },
   {
@@ -577,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "b71b71f2-52eb-4c7d-a444-bc172f735d11",
    "metadata": {},
    "outputs": [],
@@ -597,43 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "c10430d7-e7ec-4adc-aafa-3b980a4d79b3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "from nbdev import export\n",
-    "from nbdev.imports import Path, Config\n",
-    "\n",
-    "def create_mod_files(files, to_dict=False, bare=False):\n",
-    "    \"Create mod files for default exports found in `files`\"\n",
-    "    modules = []\n",
-    "    \n",
-    "    for f in sorted(files):\n",
-    "        fname = Path(f)\n",
-    "        nb = export.read_nb(fname)\n",
-    "        default = export.find_default_export(nb['cells'])\n",
-    "        \n",
-    "        if default is not None:\n",
-    "            default = os.path.sep.join(default.split('.'))\n",
-    "            modules.append(default)\n",
-    "            \n",
-    "            if not to_dict:\n",
-    "                nbs_path = Config().path(\"nbs_path\")\n",
-    "                if nbs_path is None:\n",
-    "                    nbs_path = '.'\n",
-    "                    \n",
-    "                export.create_mod_file(Config().path(\"lib_path\")/f'{default}.py', f'{nbs_path}/{fname}', bare=bare)\n",
-    "                \n",
-    "    return modules\n",
-    "\n",
-    "export.create_mod_files = create_mod_files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "id": "ce673826-f8fe-4e3d-ae2c-5f58526a31dc",
    "metadata": {},
    "outputs": [
@@ -641,13 +607,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converted library-gen.ipynb.\n"
+      "Converted 01-library-gen.ipynb.\n"
      ]
     }
    ],
    "source": [
     "#hide\n",
-    "export.notebook2script('library-gen.ipynb')"
+    "from nbdev.export import notebook2script\n",
+    "notebook2script('01-library-gen.ipynb')"
    ]
   }
  ],
