cleaned data-loading nb

--- a/nbs/02-data-loading.ipynb
+++ b/nbs/02-data-loading.ipynb
@@ -63,49 +63,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "dd5d9b23-6a8b-483b-80e7-b5b25ab20ea3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting tabulate\n",
-      "  Using cached tabulate-0.8.9-py3-none-any.whl (25 kB)\n",
-      "Installing collected packages: tabulate\n",
-      "Successfully installed tabulate-0.8.9\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install tabulate"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "21b088ae-ce55-4c0a-afe5-b0e03ee8dff6",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "| genre                      |    x |    y |   r |   g |   b |\n",
-      "|:---------------------------|-----:|-----:|----:|----:|----:|\n",
-      "| piano blues                |  696 | 3870 | 102 | 136 |  45 |\n",
-      "| australian classical piano | 1105 |  613 |  28 | 163 | 194 |\n",
-      "| histoire pour enfants      |  454 | 5661 |  86 | 134 |   8 |\n",
-      "| dutch musical              | 1067 | 6080 | 118 | 140 |  20 |\n",
-      "| blues                      |  600 | 3971 | 105 | 134 |  32 |\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>genre</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>r</th>\n",
+       "      <th>g</th>\n",
+       "      <th>b</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>piano blues</td>\n",
+       "      <td>696</td>\n",
+       "      <td>3870</td>\n",
+       "      <td>102</td>\n",
+       "      <td>136</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>australian classical piano</td>\n",
+       "      <td>1105</td>\n",
+       "      <td>613</td>\n",
+       "      <td>28</td>\n",
+       "      <td>163</td>\n",
+       "      <td>194</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>histoire pour enfants</td>\n",
+       "      <td>454</td>\n",
+       "      <td>5661</td>\n",
+       "      <td>86</td>\n",
+       "      <td>134</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>dutch musical</td>\n",
+       "      <td>1067</td>\n",
+       "      <td>6080</td>\n",
+       "      <td>118</td>\n",
+       "      <td>140</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>blues</td>\n",
+       "      <td>600</td>\n",
+       "      <td>3971</td>\n",
+       "      <td>105</td>\n",
+       "      <td>134</td>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        genre     x     y    r    g    b\n",
+       "0                 piano blues   696  3870  102  136   45\n",
+       "1  australian classical piano  1105   613   28  163  194\n",
+       "2       histoire pour enfants   454  5661   86  134    8\n",
+       "3               dutch musical  1067  6080  118  140   20\n",
+       "4                       blues   600  3971  105  134   32"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "df_genre_attrs = pd.DataFrame(dp.resources[0].read(keyed=True))\n",
     "\n",
-    "print(df_genre_attrs.head().to_markdown(index=False))"
+    "df_genre_attrs.head()"
    ]
   },
   {
