--- a/nbs/01-library-gen.ipynb
+++ b/nbs/01-library-gen.ipynb
@@ -551,6 +551,7 @@
     "#exports\n",
     "@app.command()\n",
     "def download_genre_attrs(fp='data/genre_attrs.csv'):\n",
+    "    # TODO if dir does not exist then create it\n",
     "    df_genre_attrs = get_df_genre_attrs()\n",
     "    df_genre_attrs.to_csv(fp, index=False)\n",
     "    \n",
