--- a/nbs/01-library-gen.ipynb
+++ b/nbs/01-library-gen.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "edcb581c-8f51-4142-9ed5-55c654dfdbc6",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "110dd4e7-a583-4279-b32d-eb9f53500e3e",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "08c950d9-8794-4402-b66d-435fd0310fbb",
    "metadata": {},
    "outputs": [],
@@ -103,17 +103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "779f61ca-0c0c-4ad0-af7e-dfcc54602160",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(19623, 1607)"
+       "(19666, 1607)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,17 +134,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "54ebcb6a-fc63-4bda-8572-3449a0794b48",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<div class=\"genre scanme\" id=\"item1\" onclick='playx(\"31GIhpOQpKCzlnuPn03pBQ\", \"piano blues\", this);' preview_url=\"https://p.scdn.co/mp3-preview/fd161f29a12adc40d69671ad6ff05a20135dab40\" scan=\"true\" style=\"color: #66882d; top: 15753px; left: 911px; font-size: 101%\" title=\"e.g. Champion Jack Dupree &quot;Junker's Blues&quot;\">piano blues<a class=\"navlink\" href=\"engenremap-pianoblues.html\" onclick=\"event.stopPropagation();\">»</a> </div>"
+       "<div class=\"genre scanme\" id=\"item1\" onclick='playx(\"1Os92edk1L3iu1PNQtgieM\", \"australian classical piano\", this);' preview_url=\"https://p.scdn.co/mp3-preview/ff605ba13e2d6113247040ea1bcc77c33674a1ce\" scan=\"true\" style=\"color: #1ca3c2; top: 19051px; left: 502px; font-size: 100%\" title='e.g. Edvard Grieg \"Lyric Pieces Book I, Op.12: 1. Arietta\"'>australian classical piano<a class=\"navlink\" href=\"engenremap-australianclassicalpiano.html\" onclick=\"event.stopPropagation();\">»</a> </div>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "d6fa0075-cd2a-49ad-ad5e-f832b2814070",
    "metadata": {},
    "outputs": [],
@@ -176,17 +176,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "645938a8-404b-46a2-8508-503ea78dbe87",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'piano blues'"
+       "'australian classical piano'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,17 +205,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "5a21d672-e739-4842-9f10-8d74d50272b6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'color': '#66882d', 'top': '15753', 'left': '911', 'font-size': '101%'}"
+       "{'color': '#1ca3c2', 'top': '19051', 'left': '502', 'font-size': '100%'}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,14 +236,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "id": "5e65fb01-b1a2-4732-a53e-c46747a13137",
    "metadata": {},
    "outputs": [],
    "source": [
     "#exports\n",
     "def get_genre_xy(genre_style_elems, canvas_width, canvas_height):\n",
-    "    x = canvas_width - int(genre_style_elems['left'].replace('px', ''))\n",
+    "    x = int(genre_style_elems['left'].replace('px', ''))\n",
     "    y = canvas_height - int(genre_style_elems['top'].replace('px', ''))\n",
     "\n",
     "    return x, y"
@@ -251,17 +251,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "id": "d92fe15c-4957-44a9-93ab-28382481f4c3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(696, 3870)"
+       "(1105, 615)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "id": "06293fbe-0a17-48b0-b7d1-c1f650e38836",
    "metadata": {},
    "outputs": [],
@@ -305,17 +305,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "id": "f9ba5cc6-8c92-49fb-8c5c-52edac34b8ad",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(102, 136, 45)"
+       "(28, 163, 194)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "id": "766778ff-1082-41ab-93c0-c7e504630243",
    "metadata": {},
    "outputs": [],
@@ -348,6 +348,7 @@
     "    genre_style_elems = extract_style_elems(genre_elem)\n",
     "\n",
     "    genre_attrs['genre'] = genre_elem_to_name(genre_elem)\n",
+    "    genre_attrs['hex_colour'] = genre_style_elems['color']\n",
     "    genre_attrs['x'], genre_attrs['y'] = get_genre_xy(genre_style_elems, canvas_width, canvas_height)\n",
     "    genre_attrs['r'], genre_attrs['g'], genre_attrs['b'] = hex_to_rgb(genre_style_elems['color'])\n",
     "    \n",
@@ -356,17 +357,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "id": "a8827e4b-1bbc-4dca-8b79-7d1e21f34384",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'genre': 'piano blues', 'x': 696, 'y': 3870, 'r': 102, 'g': 136, 'b': 45}"
+       "{'genre': 'australian classical piano',\n",
+       " 'hex_colour': '#1ca3c2',\n",
+       " 'x': 502,\n",
+       " 'y': 615,\n",
+       " 'r': 28,\n",
+       " 'g': 163,\n",
+       " 'b': 194}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "id": "7cf7aac7-1833-4eaf-adb5-d47eeacd6f6b",
    "metadata": {},
    "outputs": [],
@@ -411,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "id": "044905d9-9dbd-4bbe-a461-c916f722bded",
    "metadata": {},
    "outputs": [
@@ -437,6 +444,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>genre</th>\n",
+       "      <th>hex_colour</th>\n",
        "      <th>x</th>\n",
        "      <th>y</th>\n",
        "      <th>r</th>\n",
@@ -447,63 +455,68 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>piano blues</td>\n",
-       "      <td>696</td>\n",
-       "      <td>3870</td>\n",
-       "      <td>102</td>\n",
-       "      <td>136</td>\n",
-       "      <td>45</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
        "      <td>australian classical piano</td>\n",
-       "      <td>1105</td>\n",
-       "      <td>613</td>\n",
+       "      <td>#1ca3c2</td>\n",
+       "      <td>502</td>\n",
+       "      <td>615</td>\n",
        "      <td>28</td>\n",
        "      <td>163</td>\n",
        "      <td>194</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>piano blues</td>\n",
+       "      <td>#66882d</td>\n",
+       "      <td>911</td>\n",
+       "      <td>3891</td>\n",
+       "      <td>102</td>\n",
+       "      <td>136</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>histoire pour enfants</td>\n",
-       "      <td>454</td>\n",
-       "      <td>5661</td>\n",
+       "      <td>#568608</td>\n",
+       "      <td>1153</td>\n",
+       "      <td>5673</td>\n",
        "      <td>86</td>\n",
        "      <td>134</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>dutch musical</td>\n",
-       "      <td>1067</td>\n",
-       "      <td>6080</td>\n",
-       "      <td>118</td>\n",
-       "      <td>140</td>\n",
-       "      <td>20</td>\n",
+       "      <td>dalarna indie</td>\n",
+       "      <td>#a77e17</td>\n",
+       "      <td>401</td>\n",
+       "      <td>10634</td>\n",
+       "      <td>167</td>\n",
+       "      <td>126</td>\n",
+       "      <td>23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>blues</td>\n",
-       "      <td>600</td>\n",
-       "      <td>3971</td>\n",
-       "      <td>105</td>\n",
-       "      <td>134</td>\n",
-       "      <td>32</td>\n",
+       "      <td>cante alentejano</td>\n",
+       "      <td>#399c5d</td>\n",
+       "      <td>615</td>\n",
+       "      <td>1881</td>\n",
+       "      <td>57</td>\n",
+       "      <td>156</td>\n",
+       "      <td>93</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        genre     x     y    r    g    b\n",
-       "0                 piano blues   696  3870  102  136   45\n",
-       "1  australian classical piano  1105   613   28  163  194\n",
-       "2       histoire pour enfants   454  5661   86  134    8\n",
-       "3               dutch musical  1067  6080  118  140   20\n",
-       "4                       blues   600  3971  105  134   32"
+       "                        genre hex_colour     x      y    r    g    b\n",
+       "0  australian classical piano    #1ca3c2   502    615   28  163  194\n",
+       "1                 piano blues    #66882d   911   3891  102  136   45\n",
+       "2       histoire pour enfants    #568608  1153   5673   86  134    8\n",
+       "3               dalarna indie    #a77e17   401  10634  167  126   23\n",
+       "4            cante alentejano    #399c5d   615   1881   57  156   93"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "id": "0357bef8-2afd-4f7d-85ab-66d6d07ee68b",
    "metadata": {},
    "outputs": [],
@@ -543,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "id": "24adad09-22a3-4043-beae-0cdf8d6930d8",
    "metadata": {},
    "outputs": [],
@@ -560,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 42,
    "id": "149d0d27-1e89-42e2-b507-d1a608fa0680",
    "metadata": {},
    "outputs": [],
@@ -580,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 43,
    "id": "b71b71f2-52eb-4c7d-a444-bc172f735d11",
    "metadata": {},
    "outputs": [],
@@ -600,22 +613,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 44,
    "id": "ce673826-f8fe-4e3d-ae2c-5f58526a31dc",
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'C:\\\\Users\\\\Ayrto\\\\Desktop\\\\Side Projects\\\\EveryNoise-Watch\\\\everynoise\\\\_nbdev.py'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-25-059e1cc7dbbb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#hide\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mnbdev\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexport\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnotebook2script\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mnotebook2script\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'01-library-gen.ipynb'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\anaconda3\\envs\\EveryNoise\\lib\\site-packages\\nbdev\\export.py\u001b[0m in \u001b[0;36mnotebook2script\u001b[1;34m(fname, silent, to_dict, bare, recursive)\u001b[0m\n\u001b[0;32m    421\u001b[0m     \u001b[0md\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcollections\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdefaultdict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mto_dict\u001b[0m \u001b[1;32melse\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    422\u001b[0m     \u001b[0mmodules\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcreate_mod_files\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfiles\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mto_dict\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbare\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mbare\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 423\u001b[1;33m     \u001b[1;32mfor\u001b[0m \u001b[0mf\u001b[0m \u001b[1;32min\u001b[0m \u001b[0msorted\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfiles\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0md\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_notebook2script\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodules\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msilent\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msilent\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mto_dict\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbare\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mbare\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    424\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mto_dict\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;32mreturn\u001b[0m \u001b[0md\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    425\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0madd_init\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mConfig\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"lib_path\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\envs\\EveryNoise\\lib\\site-packages\\nbdev\\export.py\u001b[0m in \u001b[0;36m_notebook2script\u001b[1;34m(fname, modules, silent, to_dict, bare)\u001b[0m\n\u001b[0;32m    360\u001b[0m                 \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfname_out\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'a'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'utf8'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcode\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    361\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;34mf'{e}.py'\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mmod\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodules\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mmod\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodules\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'{e}.py'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 362\u001b[1;33m     \u001b[0msave_nbdev_module\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmod\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    363\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    364\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0msilent\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"Converted {fname.name}.\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\envs\\EveryNoise\\lib\\site-packages\\nbdev\\export.py\u001b[0m in \u001b[0;36msave_nbdev_module\u001b[1;34m(mod)\u001b[0m\n\u001b[0;32m    281\u001b[0m     \u001b[1;34m\"Save `mod` inside <code>_nbdev</code>\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    282\u001b[0m     \u001b[0mfname\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mConfig\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"lib_path\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;34m'_nbdev.py'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 283\u001b[1;33m     \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'r'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mcode\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    284\u001b[0m     \u001b[0mt\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34mr',\\n         '\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34mf'\"{k}\": \"{v}\"'\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mv\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mmod\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    285\u001b[0m     \u001b[0mcode\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_re_index_idx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msub\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"index = {\"\u001b[0m\u001b[1;33m+\u001b[0m \u001b[0mt\u001b[0m \u001b[1;33m+\u001b[0m\u001b[1;34m\"}\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcode\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'C:\\\\Users\\\\Ayrto\\\\Desktop\\\\Side Projects\\\\EveryNoise-Watch\\\\everynoise\\\\_nbdev.py'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted 01-library-gen.ipynb.\n"
      ]
     }
    ],
@@ -624,14 +630,6 @@
     "from nbdev.export import notebook2script\n",
     "notebook2script('01-library-gen.ipynb')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dca85c81-3e63-4926-a37e-ffb1437abc63",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
